<resources>
    <!-- about -->
    <string name="about_header_text">About</string>
    <string name="about_support">Support</string>
    <string name="about_other">Other</string>

    <!-- settings -->
    <string name="settings_header">Settings</string>
    <string name="settings_thumbnail_heading">Thumbnails</string>
    <string name="settings_animate_gif">Animate GIFs</string>
    <string name="settings_show_hidden">Show hidden files</string>
    <string name="settings_general_heading">General</string>
    <string name="settings_pin">App PIN</string>
    <string name="settings_reset">Reset all settings</string>
    <string name="settings_danger_header">Danger zone</string>
    <string name="settings_use_bin">Move items into the Recycle Bin instead of deleting them</string>
    <string name="settings_sort_button">Sorting settings</string>

    <!-- sorting -->
    <string name="sorting_album_header">Album sort</string>
    <string name="sorting_image_header">Image sort</string>
    <string name="sorting_sort_text">Sort by</string>
    <string name="sorting_asc_text">Ascending order</string>
    <string-array name="sorting_sort_types">
        <item>Modification Date</item>
        <item>Creation Date</item>
        <item>Size</item>
        <item>Name</item>
        <item>Count</item>
    </string-array>

    <!-- pin -->
    <string name="pin_enter_pin">Enter the PIN</string>
    <string name="pin_enter_pin_again">Enter the PIN again</string>
    <string name="pin_didnt_match">Entered PINs don\'t match</string>

    <!-- popup menu -->
    <string name="popup_move">Move</string>
    <string name="popup_copy">Copy</string>
    <string name="popup_delete">Delete</string>
    <string name="popup_move_folder_success">Folders moved successfully</string>
    <string name="popup_copy_folder_success">Folders copied successfully</string>
    <string name="popup_delete_folder_success">Folders deleted successfully</string>
    <string name="popup_move_file_success">Files moved successfully</string>
    <string name="popup_copy_file_success">Files copied successfully</string>
    <string name="popup_delete_file_success">Files deleted successfully</string>
    <string name="popup_info">Info</string>
    <string name="popup_items_selected">Items selected</string>
    <string name="popup_delete_confirm">Are you sure you want to delete this album?</string>

    <!-- general -->
    <string name="settings_button">Settings</string>
    <string name="more_button">More</string>
    <string name="back_arrow_text">Back</string>
    <string name="search_done">File searching is done</string>

    <!-- info popup -->
    <string name="info_name">Name</string>
    <string name="info_file_count">File count</string>
    <string name="info_path">Path</string>
    <string name="info_size">Size</string>
    <string name="info_cdate">Created</string>
    <string name="info_mdate">Modified</string>

    <!-- Filter -->
    <string name="filter_header_text">Filter</string>
    <string name="filter_complete">Filtering is done</string>

    <!-- permission -->
    <string name="permission_storage_denied">No storage permission</string>
    <string name="permission_storage_title">Storage permission</string>
    <string name="permission_storage_text">This permission needed to run the application. To turn it back on go to the app settings.</string>
    <string name="permission_notification_denied">No notification permission</string>

    <!-- info -->
    <string name="email" translatable="false">afarkasam2@gmail.com</string>
    <string name="version_text" translatable="false">Version 1.6.6</string>
    <string name="app_name" translatable="false">AntiDupe Gallery</string>

    <!-- notifications -->
    <string name="notifications_filtering">Filtering</string>
    <string name="notifications_filtering_starting">Starting filtering…</string>
    <string name="notifications_filtering_ended">Filtering ended. Click to see.</string>
    <!-- ids -->

    <!-- texts -->
    <string name="texts_files">files</string>
    <string name="texts_group">group</string>
    <string name="texts_stop">stop</string>
</resources>