<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/primary_text_color">

    <TextView
        android:id="@+id/info_name_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:text="@string/info_name"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_count_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:text="@string/info_file_count"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_path_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:text="@string/info_path"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_size_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:text="@string/info_size"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_cdate_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:text="@string/info_cdate"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_cdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_mdate_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:text="@string/info_mdate"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info_mdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_text_color"
        android:textAlignment="viewStart" />
</LinearLayout>