<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/primary_text_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/secondary_text_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sorting_album_header"
            android:textAlignment="viewStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="start|center_vertical"
                android:text="@string/sorting_sort_text"
                android:textAlignment="viewStart" />

            <Spinner
                android:id="@+id/sorting_folder_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minHeight="50dp"
                android:entries="@array/sorting_sort_types"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="start|center_vertical"
                android:text="@string/sorting_asc_text"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/sorting_folder_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minHeight="50dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sorting_image_header"
            android:textAlignment="viewStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="start|center_vertical"
                android:text="@string/sorting_sort_text"
                android:textAlignment="viewStart" />

            <Spinner
                android:id="@+id/sorting_image_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minHeight="50dp"
                android:entries="@array/sorting_sort_types"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="start|center_vertical"
                android:text="@string/sorting_asc_text"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/sorting_image_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minHeight="50dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>