<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_button"
        style="@style/BackArrow"
        android:tooltipText="@string/back_arrow_text"
        android:contentDescription="@string/back_arrow_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/about_header_text"
        android:textAppearance="@style/MainHeader"
        android:gravity="center_vertical"
        android:textDirection="locale"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/_about_support"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_support"
                    android:textAppearance="@style/AboutHeader"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/_about_email_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/_about_email"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/company_email"
                    android:textAppearance="@style/AboutBody"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/_about_email_icon"
                    app:layout_constraintTop_toBottomOf="@+id/_about_support" />

                <ImageView
                    android:id="@+id/_about_email_icon"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_email"
                    app:layout_constraintBottom_toBottomOf="@+id/_about_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/_about_support" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/_about_other"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_other"
                    android:textAppearance="@style/AboutHeader"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/_about_other_version"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/_about_other_version"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:gravity="center_vertical"
                    android:text="@string/version_text"
                    android:textAppearance="@style/AboutBody"
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/_about_other_version_icon"
                    app:layout_constraintTop_toBottomOf="@+id/_about_other" />

                <ImageView
                    android:id="@+id/_about_other_version_icon"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_info"
                    app:layout_constraintBottom_toBottomOf="@+id/_about_other_version"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/_about_other"
                    android:contentDescription="@null"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>